2004-12-04 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * Bug fix due my last commit (compilation under Windows).
   * Example/Volume2Dicom : bug fix in the file and reformatting source code

2004-12-03 Mathieu Malaterre  <Mathieu.Malaterre@creatis.insa-lyon.fr>
   * Huge cleanup:
     - Remove printf / sprintf
     - include iostream AFTER gdcm so we don't get warnings
     - GDCM_NO_ANSI_STRING_STREAM shouldn't be used explitely ouside of gdcm 
       source
     - Also remove tons of include from header files, hopefully this should 
       speeup the compilation time, since it was becoming a dog slow.
     - Remove gdcm.h as it include way too many files and slow down compilation 
       (plus it is not up to date)
     - remove 'using namespace std' this is BAD !

2004-12-03 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * Remove memory leaks on the DicomDir
   * Remove some useless datas in DicomDirObject
   * Add usefull methods in SQItem, to be complient withe the ElementSet

2004-12-03 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * src/gdcmFile.[h|cxx] : now use FileType instead of TWriteType.

2004-12-03 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * src/gdcmPixelWriteConvert.[h|cxx] : new class to write datas (and in the
     future, with convertion)
   * src/gdcmFile.[h|cxx] : the PixelWriteConverter instance replace Pixel_Data
     and ImageDataSize values. Remove the method to get the PixelReadConverter
     from the output of the class

2004-12-03 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * Rename src/gdcmPixelConvert.[h|cxx] to src/gdcmPixelReadConvert.[h|cxx]

2004-12-02 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * vtk/vtkGdcmReader.cxx : correct error in vtkDebugMacro, vtkWarningMacro
     and vtkErrorMacro use.
   * gdcmPython/gdcm.i : corrections to avoid warnings at compilation

2004-12-02 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>